--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "axios": "^0.26.1",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
+    "dotenv": "^16.0.1",
     "ejs": "^3.0.2",
     "express": "^4.17.3",
     "express-handlebars": "^6.0.5",
