--- a/package.json
+++ b/package.json
@@ -30,12 +30,13 @@
   "author": "raptor and solomon",
   "license": "ISC",
   "engines": {
-    "node": "16.14.2"
+    "node": "16.14.2",
+    "npm" : "8.5.0"
   },
   "bugs": {
-    "url": "https://github.com/AlexanderLukashuk/Sanya-Rama_GymsoFitness/issues"
+    "url": "https://github.com/AlexanderLukashuk/API_work_Sanya_Rama/issues"
   },
-  "homepage": "https://github.com/AlexanderLukashuk/Sanya-Rama_GymsoFitness#readme",
+  "homepage": "https://github.com/AlexanderLukashuk/API_work_Sanya_Rama#readme",
   "description": "",
   "devDependencies": {
     "nodemon": "^2.0.16"
