grohnuli heroku, michail davai po novoi

--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
   "license": "ISC",
   "engines": {
     "node": "16.14.2",
-    "npm": "8.5.0"
+    "npm": "8.5.0",
+    "git": "2.35.1"
   },
   "bugs": {
     "url": "https://github.com/AlexanderLukashuk/API_work_Sanya_Rama/issues"
